<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="account_active">Active account</string>
    <string name="account_in_active">InActive</string>
    <string name="add_new_account">Add new account</string>
    <string name="app_name">Datová schránka</string>
    <string name="cancel">Cancel</string>
    <string name="logger">Logger</string>
    <string name="nick_name">Nick Name</string>
    <string name="numEchMinute">10</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="please_enter_nickname">Please enter nick name...</string>
    <string name="retype_password">Retype password</string>
    <string name="starts_each_minute">Test each (x) minute</string>
    <string name="system_settings">System settings</string>
    <string name="test_account">Test account</string>
    <string name="test_it">Test it</string>
    <string name="user_name">User name</string>
</resources>
